force-app/main/default/objects/QTB_CustomInvoiceNumber__c/QTB_CustomInvoiceNumber__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>QTB-44a- Its used for generating sequence number for generating custom invoice id</description>
    <label>Custom Invoice Number</label>
</CustomObject>