force-app/main/default/objects/QTB_CustomInvoiceNumber__c/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <description>QTB-44a</description>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>