force-app/main/default/objects/QTB_CustomInvoiceNumber__c/fields/QTB_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>QTB_Date_Time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>