force-app/main/default/objects/QTB_CustomInvoiceNumber__c/fields/QTB_Is_Running__c.field-meta.xml
<CustomField>
    <fullName>QTB_Is_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Running</label>
    <type>Checkbox</type>
</CustomField>