force-app/main/default/objects/QTB_CustomInvoiceNumber__c/fields/QTB_Legal_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Number__c</fullName>
    <label>Legal Entity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>