force-app/main/default/objects/QTB_CustomInvoiceNumber__c/fields/QTB_Next_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Next_Sequence_Number__c</fullName>
    <label>Next Sequence Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>