force-app/main/default/objects/QTB_CustomInvoiceNumber__c/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>NAME</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_State__c</columns>
    <columns>QTB_Company_Code__c</columns>
    <columns>QTB_Legal_Entity_Number__c</columns>
    <columns>QTB_Next_Sequence_Number__c</columns>
    <columns>QTB_Is_Running__c</columns>
    <filterScope>Everything</filterScope>
    <label>New View</label>
    <language>en_US</language>
</ListView>